# TODO

./: .gitignore  .prettierignore  README.md  WORKFLOW_TEMPLATE.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: rust.yml
.husky/: pre-commit
docs/superpowers/plans/: 2026-05-21-phase2-organization.md
src/: App.vue  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  main.rs  notes.rs  prompt.rs  store.rs
src-tauri/src/commands/: ai.rs  config.rs  mod.rs  screenshot.rs  tasks.rs
src/components/: AddVendorModal.vue  AiAssistant.vue  AiFocusBar.vue  Base64Tool.vue  ColorTool.vue  DatePicker.vue  FloatingWindow.vue  InputDialog.vue  JsonTool.vue  MarkdownEditor.vue  MiniCalendar.vue  NoteEditor.vue  RegexTool.vue  SettingsPanel.vue  Sidebar.vue  TagFilterBar.vue  TaskInput.vue  TaskItem.vue  TaskList.vue  TaskStats.vue  TimestampTool.vue  ToolShell.vue  Toolbox.vue  UuidTool.vue  VendorList.vue
src/composables/: useAiStatus.ts  useModuleRegistry.ts  useTheme.ts
src/styles/: global.css  tokens.css
